Return []orgWithSpace in space/my method.
Return all the analysis data in video/list method.
