# server/docs/swagger.json
@@ -612,7 +612,7 @@
                             "items": {
                                 "type": "array",
                                 "items": {
-                                    "$ref": "#/definitions/model.Space"
+                                    "$ref": "#/definitions/space.orgWithSpace"
                                 }
                             }
                         }
@@ -861,7 +861,7 @@
                     {
                         "type": "string",
                         "description": "Video ID",
-                        "name": "id",
+                        "name": "video_id",
                         "in": "path",
                         "required": true
                     }
@@ -1182,6 +1182,59 @@
                 }
             }
         },
+        "space.orgWithSpace": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "permission": {
+                    "type": "object",
+                    "$ref": "#/definitions/space.organisationUser"
+                },
+                "slug": {
+                    "type": "string"
+                },
+                "spaces": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Space"
+                    }
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "space.organisationUser": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "space.space": {
             "type": "object",
             "required": [
@@ -1227,7 +1280,7 @@
                 "nodes": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/model.Video"
+                        "$ref": "#/definitions/video.videoanalysisData"
                     }
                 },
                 "total": {
